# termwave

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
src/: analysis.rs  audio.rs  config.rs  main.rs  render.rs  theme.rs
tap/: Package.swift
tap/Sources/: main.swift
themes/: classic.toml  fire.toml  matrix.toml  mono.toml  ocean.toml  purple.toml  synthwave.toml  tokyo-night-moon.toml
