[package]
name = "termwave"
version = "0.1.0"
edition = "2021"
description = "Terminal audio visualizer"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossterm = "0.28"
ratatui = "0.29"
rustfft = "6"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
